--- a/index.html
+++ b/index.html
@@ -70,15 +70,22 @@
                 hi, i am <strong>mouad el asri</strong>
             </h1>
 
-            <p class="section__subtitle section__subtitle--ntro capitalize">
+            <p class="section__subtitle section__subtitle--intro capitalize">
                 front-end developer
             </p>
 
             <img
-                src="./img/mouad-el-asri.jpg"
+                src="./img/mouad-el-asri-00.jpeg"
                 alt="a picture of mouad el asri"
+                class="intro__img"
             />
         </section>
+
+        <!-- Main Gif -->
+
+        <div class="main-img">
+            <img src="./img/main_img.gif" alt="a gif of a web developer coding" class="main-img__item">
+        </div>
 
         <!-- My Services-->
 
@@ -92,11 +99,11 @@
                     <h3 class="capitalize">front-end dev</h3>
 
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                        I enjoy bringing ideas to life. I create successful
+                        websites that are fast, easy to use, built with best
+                        practices, and fit to the user's needs.
+                        <br /><strong>< NB :</strong> I like to build things
+                        from scratch <strong> /></strong>
                     </p>
                 </div>
 
@@ -104,11 +111,11 @@
                     <h3 class="capitalize">ui design</h3>
 
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                        Clean design patterns, simple content structure and
+                        thoughtful interactions are the most things I value.
+                        <br /><strong>< NB :</strong>
+                        I am really keen to contributing to society through
+                        design.<strong> /></strong>
                     </p>
                 </div>
 
@@ -116,11 +123,8 @@
                     <h3 class="capitalize">wordpress</h3>
 
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam, quis nostrud
-                        exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                        You want to manage your website using the most popular
+                        web content management system. <strong>So do I</strong>
                     </p>
                 </div>
             </div>
@@ -135,93 +139,180 @@
                 who i am
             </h2>
 
-            <p class="section__subtitle setion__subtitle--about"></p>
+            <p class="section__subtitle section__subtitle--about">
+                Front-End developer & designer based out of Rabat
+            </p>
 
             <div class="about-me__body">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    I am a meticulous front-end developer and a computer science
+                    student at 1337 coding school, adept at building responsive
+                    web applications. Passionate about learning new
+                    technologies, bringing ideas to life, connecting with people
+                    across different industries and working with ambitious
+                    people to build efficient and robust applications suited to
+                    the user's needs.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    I am also a quick learner with good programming and
+                    debugging skills. I enjoy building new softwares and solving
+                    technical problems. Besides, I excel in my ability to work
+                    under pressure and handle stressful situations very well.
+                </p>
+                <p>
+                    If you catch me outside, I'm an adventurous traveler and an
+                    avid lover of music!
+                </p>
+                <p>
+                    I also like meeting new people over a cup of coffee. Please
+                    feel free to reach me out via email at
+                    elasri.mouad.2002@gmail.com
+                </p>
+                <p>
+                    <strong class="capitalize">skills :</strong>
+                    <br />
+                    <strong class="capitalize"
+                        >- Programming Languages :</strong
+                    >
+                    C, C++, JavaScript
+                    <br />
+                    <strong class="capitalize">- Web Dev :</strong> HTML, CSS,
+                    Bootstrap, React
+                    <br />
+                    <strong class="capitalize">- Dev Tools :</strong> Git,
+                    Github
                 </p>
             </div>
 
             <img
-                src="./img/mouad-el-asri-01.jpg"
-                alt="a picture of mouad el asri"
+                src="./img/mouad-el-asri-01.jpeg"
+                alt="a picture of mouad el asri smiling"
+                class="about-me__img"
             />
         </section>
 
         <!-- My Work -->
 
         <section class="my-work" id="work">
-            <h2 class="section__title capitalize">my work</h2>
+            <h2 class="section__title section__title--work capitalize">
+                my work
+            </h2>
 
-            <p class="section__subtitle">
+            <p class="section__subtitle section__subtitle--work">
                 Here are a few past projects I've worked on. Want to see more?
-                <a href="mailto:elasri.mouad.2002@gmailcom">Contact me.</a>
+                <a
+                    href="mailto:elasri.mouad.2002@gmailcom"
+                    class="my-work__link"
+                    >Contact me</a
+                >
             </p>
 
-            <div class="portfoilo">
+            <div class="portfolio">
                 <!-- Portfolio Item 01 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-01" alt=""
+                    ><img
+                        src="./img/portfolio-01.png"
+                        alt="my portfolio website"
+                        class="portfolio__img"
                 /></a>
 
                 <!-- Portfolio Item 02 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-02" alt=""
+                    ><img
+                        src="./img/portfolio-02.png"
+                        alt="push swap, a project that involves sorting data on a stack, with a limited set of instructions"
+                        class="portfolio__img"
                 /></a>
 
                 <!-- Portfolio Item 03 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-03" alt=""
+                    ><img
+                        src="./img/portfolio-03.png"
+                        alt="so long, this project is a small 2D game with minilibx"
+                        class="portfolio__img"
                 /></a>
 
                 <!-- Portfolio Item 04 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-04" alt=""
+                    ><img
+                        src="./img/portfolio-04.png"
+                        alt="ft_printf, recoding printf function using variadic functions"
+                        class="portfolio__img"
                 /></a>
 
                 <!-- Portfolio Item 05 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-05" alt=""
+                    ><img
+                        src="./img/portfolio-05.png"
+                        alt="get next line, project about reading files' content line by line"
+                        class="portfolio__img"
                 /></a>
 
                 <!-- Portfolio Item 06 -->
                 <a href="#" class="portfolio__item"
-                    ><img src="./img/portfoilo-06" alt=""
+                    ><img
+                        src="./img/portfolio-06.png"
+                        alt="libft, recoding a few functions of the C standard library"
+                        class="portfolio__img"
                 /></a>
             </div>
         </section>
 
         <!-- Footer -->
 
-        <footer>
-            <a href="mailto:elasri.mouad.2002@gmail.com">
+        <footer class="footer">
+            <a href="mailto:elasri.mouad.2002@gmail.com" class="footer__link">
                 elasri.mouad.2002@gmail.com
             </a>
             <ul class="contact-list">
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="#">a</a>
+                    <a
+                        class="contact-list__link"
+                        href="https://github.com/Mouad-El-Asri"
+                        ><i class="fa-brands fa-github"></i
+                    ></a>
                 </li>
 
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="#">b</a>
+                    <a
+                        class="contact-list__link"
+                        href="https://www.linkedin.com/in/mouad-el-asri/"
+                        ><i class="fa-brands fa-linkedin"></i
+                    ></a>
                 </li>
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="#">c</a>
+                    <a
+                        class="contact-list__link"
+                        href="mailto:elasri.mouad.2002@gmail.com"
+                        ><i class="fa-solid fa-envelope"></i
+                    ></a>
                 </li>
                 <li class="contact-list__item">
-                    <a class="contact-list__link" href="#">d</a>
+                    <a
+                        class="contact-list__link"
+                        href="https://twitter.com/MouadElAsri4"
+                        ><i class="fa-brands fa-twitter"></i
+                    ></a>
+                </li>
+                <li class="contact-list__item">
+                    <a
+                        class="contact-list__link"
+                        href="https://www.instagram.com/mouad_el_asriii/"
+                        ><i class="fa-brands fa-instagram"></i
+                    ></a>
+                </li>
+                <li class="contact-list__item">
+                    <a
+                        class="contact-list__link"
+                        href="https://www.facebook.com/mouad.alasri.7"
+                        ><i class="fa-brands fa-facebook"></i
+                    ></a>
                 </li>
             </ul>
+            <p class="footer__bottom">
+                Built with <strong><i class="fa-solid fa-heart"></i></strong> by
+                Mouad El Asri
+            </p>
         </footer>
     </body>
 </html>
