Just trolling the repo

--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
                 <img src="./img/logo.png" alt="mouad el asri logo image" />
             </div>
 
-            <button class="nav-bar" aria-label="navigation links bar">
-                <span class="hamburger"></span>
-            </button>
-
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -51,13 +47,11 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#about" class="nav__link capitalize"
-                            >about me</a
-                        >
+                        <a href="#about" class="nav__link capitalize">about</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#work" class="nav__link capitalize">my work</a>
+                        <a href="#work" class="nav__link capitalize">work</a>
                     </li>
                 </ul>
             </nav>
@@ -84,7 +78,10 @@
         <!-- Main Gif -->
 
         <div class="main-img">
-            <img src="./img/main_img.gif" alt="a gif of a web developer coding" class="main-img__item">
+            <img
+                src="./img/main_img.gif"
+                alt="a gif of a web developer coding"
+            />
         </div>
 
         <!-- My Services-->
@@ -102,7 +99,7 @@
                         I enjoy bringing ideas to life. I create successful
                         websites that are fast, easy to use, built with best
                         practices, and fit to the user's needs.
-                        <br /><strong>< NB :</strong> I like to build things
+                        <strong>< NB :</strong> I like to build things
                         from scratch <strong> /></strong>
                     </p>
                 </div>
@@ -113,9 +110,10 @@
                     <p>
                         Clean design patterns, simple content structure and
                         thoughtful interactions are the most things I value.
-                        <br /><strong>< NB :</strong>
-                        I am really keen to contributing to society through
-                        design.<strong> /></strong>
+                        <strong>< NB :</strong> I am really keen to
+                        contributing to society through design.<strong>
+                            /></strong
+                        >
                     </p>
                 </div>
 
@@ -124,7 +122,7 @@
 
                     <p>
                         You want to manage your website using the most popular
-                        web content management system. <strong>So do I</strong>
+                        web content management system. <strong>So do I.</strong>
                     </p>
                 </div>
             </div>
@@ -209,7 +207,7 @@
 
             <div class="portfolio">
                 <!-- Portfolio Item 01 -->
-                <a href="#" class="portfolio__item"
+                <a href="./portfolio-item-01.html" class="portfolio__item"
                     ><img
                         src="./img/portfolio-01.png"
                         alt="my portfolio website"
@@ -220,7 +218,7 @@
                 <a href="#" class="portfolio__item"
                     ><img
                         src="./img/portfolio-02.png"
-                        alt="push swap, a project that involves sorting data on a stack, with a limited set of instructions"
+                        alt="a project that involves sorting data on a stack, with a limited set of instructions"
                         class="portfolio__img"
                 /></a>
 
@@ -228,7 +226,7 @@
                 <a href="#" class="portfolio__item"
                     ><img
                         src="./img/portfolio-03.png"
-                        alt="so long, this project is a small 2D game with minilibx"
+                        alt="this project is a small 2D game with minilibx"
                         class="portfolio__img"
                 /></a>
 
@@ -236,7 +234,7 @@
                 <a href="#" class="portfolio__item"
                     ><img
                         src="./img/portfolio-04.png"
-                        alt="ft_printf, recoding printf function using variadic functions"
+                        alt="recoding printf function using variadic functions"
                         class="portfolio__img"
                 /></a>
 
@@ -244,7 +242,7 @@
                 <a href="#" class="portfolio__item"
                     ><img
                         src="./img/portfolio-05.png"
-                        alt="get next line, project about reading files' content line by line"
+                        alt="get next line project about reading files' content line by line"
                         class="portfolio__img"
                 /></a>
 
@@ -252,7 +250,7 @@
                 <a href="#" class="portfolio__item"
                     ><img
                         src="./img/portfolio-06.png"
-                        alt="libft, recoding a few functions of the C standard library"
+                        alt="recoding a few functions of the C standard library"
                         class="portfolio__img"
                 /></a>
             </div>
@@ -269,6 +267,7 @@
                     <a
                         class="contact-list__link"
                         href="https://github.com/Mouad-El-Asri"
+                        target="_blank"
                         ><i class="fa-brands fa-github"></i
                     ></a>
                 </li>
@@ -277,6 +276,7 @@
                     <a
                         class="contact-list__link"
                         href="https://www.linkedin.com/in/mouad-el-asri/"
+                        target="_blank"
                         ><i class="fa-brands fa-linkedin"></i
                     ></a>
                 </li>
@@ -284,6 +284,7 @@
                     <a
                         class="contact-list__link"
                         href="mailto:elasri.mouad.2002@gmail.com"
+                        target="_blank"
                         ><i class="fa-solid fa-envelope"></i
                     ></a>
                 </li>
@@ -291,6 +292,7 @@
                     <a
                         class="contact-list__link"
                         href="https://twitter.com/MouadElAsri4"
+                        target="_blank"
                         ><i class="fa-brands fa-twitter"></i
                     ></a>
                 </li>
@@ -298,6 +300,7 @@
                     <a
                         class="contact-list__link"
                         href="https://www.instagram.com/mouad_el_asriii/"
+                        target="_blank"
                         ><i class="fa-brands fa-instagram"></i
                     ></a>
                 </li>
@@ -305,6 +308,7 @@
                     <a
                         class="contact-list__link"
                         href="https://www.facebook.com/mouad.alasri.7"
+                        target="_blank"
                         ><i class="fa-brands fa-facebook"></i
                     ></a>
                 </li>
